# smolmatrix

./: CHANGELOG.md  Cargo.toml  release.toml
src/: index.rs  lib.rs  ops.rs  vector.rs
