[package]
name = "smolmatrix"
version = "0.1.8"
edition = "2021"
description = "Small simple matrix library"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/funnsam/smolmatrix"

[dependencies]
serde = { version = "1.0.216", optional = true, default-features = false }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dev-dependencies]
serde_test = "1.0.177"
