[package]
name = "smolmatrix"
version = "0.2.0"
edition = "2021"
description = "Small simple matrix library"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/funnsam/smolmatrix"

[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dev-dependencies]
serde_test = "1.0.177"
